   - includes a lot of logic and 70 brush-presets, which may be combined freely
     - due to its complexity it is not available on GPU yet
   - new "Painterly"-random-generator which utilizes this variation
   - new "Painterly Style"-mutation, which is available both in the "Quick Mutations"-tab and the MutaGen-window as well
 - some optimizations to the realtime-render-preview in the main editor
 - created a reusable library (maven-artifact) which contains the main functionality and the CLI: org.jwildfire:jwildfire-lib
 - this library will be used first in JWildfireSwan
 - lots of refactoring and restandardisation

V7.30 (27.11.2021)
 -introducing the new CLI, which allows to execute functions of the software without the user-interface.
  It is currently limited to rendering and to generating random flames. Please see the users manual for
  more details.

V7.20 (05.11.2021)
 - option to generate z-buffers for regular flames. While this option is limited and may not work well on many flames, it may help to generate awesome
   effects for certain flames. Also available with GPU-rendering.
 - motion-curve-editor: when using an mp3-file as input you may have an option to chose a list of of frequency-bands, rather then only one single frequency band.
   When generating the motion curve, the average of all the selected bands is generated. This give a particular band more importance you may add it multiple times.
 - important change for macOS: security scoped bookmarks are used to remember already selected folder-locations
   This reduces the amount of dialogs of the type "Please select the folder ... in order to access...",
   which is a great improvement of user experience.
 - added support for more variations on GPU. Thanks to Jesus Sosa for your help! We now
   have about 660 variations which are supported on GPU!
 - minor change to the calculation of dof on GPU
 - the default setting for "ZBuffer filename" is now "name_depth" (instead of "zbuf_name")